# ferdelance

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
example/: fib.fdl  gc_big.fdl  gc_hard.fdl  gc_list_no_tc.fdl  gc_list_tc.fdl  gc_simple.fdl  idx.fdl  input.fdl  lambda.fdl  lambda2.fdl  lambda3.fdl  lambda_gc.fdl  lambda_gc2.fdl  lambda_gc3.fdl  lambda_recursion.fdl  list.fdl  map.fdl  math.fdl  mod.fdl  nested_tuple.fdl  print.fdl  sum.fdl  tc.fdl  tco.fdl  tuple.fdl  tuple_gc.fdl
lib/: CMakeLists.txt  gc.c  gc.h  gctest.c  wrapper.c
src/: ast.rs  compiler.rs  grammar.lalrpop  main.rs  parser.rs  tester.rs  x86asm.rs
src/tests/: compiler.rs  parser.rs
